# LibraC

./: .gitignore  CMakeLists.txt  README.md
shaders/: default.vert  default330.vert
src/: CMakeLists.txt  libraC.h  libraCore.c  libraCore.h  libraMath.c  libraMath.h  libraVideo.c  libraVideo.h  typedefs.h
src/linux/: CMakeLists.txt  libraC-linux.c  libraC-linux.h
src/windows/: CMakeLists.txt  libraC-windows.c  libraC-windows.h
tests/: CMakeLists.txt  libraCoreTests.cpp
